--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+<main>
 <!-- Messenger Chat plugin Code -->
 <div id="fb-root"></div>
 
@@ -38,13 +38,6 @@
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
 </script>
-
-
-
-
-
-
-
 
 
     <div class="big-wrapper light">
@@ -125,7 +118,7 @@
         </div>
 
 
-
+</main>
 
 
 
