--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
 
   <!--javascript files--> 
   <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-
-
-
+    <script scr="app.js"></script>
 
 
 
